# plethora

./: Cargo.toml
examples/: .gitignore
examples/basic/: Cargo.toml  stuff.toml
examples/basic/scripts/: package.json  pnpm-lock.yaml  tsconfig.json
examples/basic/scripts/controllers/: toasts.ts
examples/basic/scripts/packs/: base.ts
examples/basic/src/: main.rs
examples/basic/themes/default/: index.liquid  mod.toml
examples/basic/themes/default/_errors/: error.liquid  not_found.liquid
examples/basic/themes/default/_layouts/: layout.liquid
examples/basic/themes/default/_tailwind/: config.js
src/: lib.rs  scratch.rs
src/binary/: flatten.rs  mod.rs  output.rs
src/db/: mod.rs
src/helper/: fs.rs
src/reload/: mod.rs  proc.rs
src/scripts/: capture.rs  mod.rs
src/serve/: app.rs  extra.rs  hooks.rs  mod.rs  render.rs  router.rs
src/serve/current/: language.rs  mod.rs  session.rs  theme.rs  user.rs
src/serve/error/: fallback.html  fallback.rs  mod.rs  traits.rs
src/serve/public/: mod.rs  reload.rs
src/server/: extra.rs  hooks.rs  mod.rs  render.rs
src/server/current/: mod.rs  session.rs  theme.rs  user.rs
src/server/error/: mod.rs  traits.rs
src/stuff/: builder.rs  default.toml  mod.rs  trace.rs
src/styles/: mod.rs  process.rs
src/themes/: builder.rs  mod.rs  theme.rs
src/themes/ingest/: baked.rs  files.rs  mod.rs
src/themes/templates/: globals.rs  mod.rs  parser.rs
src/themes/templates/extension/: mod.rs
src/themes/templates/extension/core/: args.rs  mod.rs  render.rs  traits.rs
src/themes/templates/extension/impls/: default.rs  js.rs  macro.rs  mod.rs  title.rs
src/themes/templates/extension/impls/render/: frame.rs  mod.rs  output.rs
