[package]
name = "plethora"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "examples/*"]

[features]
default = ["langdir"]
baked-themes = ["dep:include_dir"]
packaged = ["baked-themes", "dep:tracing-appender"]
langdir = []

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
aho-corasick = "1.1.3"
anyhow = { version = "1.0.86", features = ["backtrace"] }
arc-swap = "1.7.1"
async-stream = "0.3.5"
axum = "0.7.5"
bytes = "1.6.1"
camino = { version = "1.1.7", features = ["serde", "serde1"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
dashmap = "6.0.1"
dotenvy = "0.15.7"
flate2 = "1.0.30"
flume = "0.11.0"
futures = "0.3.30"
html-escape = "0.2.13"
include_dir = { version = "0.7.4", optional = true }
kstring = { version = "2.0.0", features = ["arc", "serde"] }
liquid = "0.26.6"
liquid-core = "0.26.6"
liquid-lib = "0.26.6"
notify-debouncer-full = { version = "0.3.1", default-features = false }
pin-project-lite = "0.2.14"
reqwest = { version = "0.12.5", features = ["stream"] }
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.120"
tar = "0.4.41"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
toml = "0.8.14"
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-appender = { version = "0.2.3", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4", "fast-rng"] }
walkdir = "2.5.0"
